# src/swagger.json
@@ -19,28 +19,34 @@
                 "schema": {
                   "type": "object",
                   "properties": {
+                    "requestID": {
+                      "type": "string",
+                      "example": "b866acb5-7777-465c-a136-70f9f2066987"
+                    },
                     "status": {
                       "type": "integer",
                       "example": 200
                     },
                     "data": {
-                      "type": "object",
-                      "properties": {
-                        "id": {
-                          "type": "integer",
-                          "example": 1
-                        },
-                        "name": {
-                          "type": "string",
-                          "example": "New Category"
-                        },
-                        "age": {
-                          "type": "integer",
-                          "example": 20
-                        },
-                        "email": {
-                          "type": "string",
-                          "example": "users@email.com"
+                      "type": "array",
+                      "items": {
+                        "properties": {
+                          "id": {
+                            "type": "integer",
+                            "example": 1
+                          },
+                          "name": {
+                            "type": "string",
+                            "example": "John"
+                          },
+                          "age": {
+                            "type": "integer",
+                            "example": 20
+                          },
+                          "email": {
+                            "type": "string",
+                            "example": "users@email.com"
+                          }
                         }
                       }
                     },
